# dataroom-api

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2bb48ecb63cf_add_workspaces.py  2d8c6a1f59e8_initial_migration.py  353d6c788e10_add_guid_fields.py  5551d3b0ad32_add_content_hash_to_files.py  5e5e78c90014_add_favorite_field.py  5e8f1a2b3c4d_add_session_guid_to_workspaces.py  7ee59ada4409_remove_is_deleted_from_workspaces.py
app/api/: dependencies.py  router.py
app/api/routes/: files.py  folders.py  search.py  workspaces.py
app/core/: config.py  database.py
app/models/: __init__.py  file.py  folder.py  workspace.py
app/schemas/: file.py  folder.py  search.py  workspace.py
docs/: api_structure.md  db_structure.md
scripts/: check_db.py
